// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar Component SearchBar handles search but no results 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nav-bar-menu-item nav-bar-search-container"
      >
        <input
          autocomplete="false"
          class="nav-bar-search"
          data-testid="SEARCH"
          placeholder="PLACEHOLDER"
          type="text"
        />
      </div>
      <div>
        <div>
          ControlleMenu
          closed
          <div
            data-testid="SEARCH-INIDICATOR"
          />
          has no ref
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="nav-bar-menu-item nav-bar-search-container"
    >
      <input
        autocomplete="false"
        class="nav-bar-search"
        data-testid="SEARCH"
        placeholder="PLACEHOLDER"
        type="text"
      />
    </div>
    <div>
      <div>
        ControlleMenu
        closed
        <div
          data-testid="SEARCH-INIDICATOR"
        />
        has no ref
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchBar Component SearchBar handles search with only spaces 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nav-bar-menu-item nav-bar-search-container"
      >
        <input
          autocomplete="false"
          class="nav-bar-search"
          data-testid="SEARCH"
          placeholder="PLACEHOLDER"
          type="text"
        />
      </div>
      <div>
        <div>
          ControlleMenu
          closed
          has no ref
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="nav-bar-menu-item nav-bar-search-container"
    >
      <input
        autocomplete="false"
        class="nav-bar-search"
        data-testid="SEARCH"
        placeholder="PLACEHOLDER"
        type="text"
      />
    </div>
    <div>
      <div>
        ControlleMenu
        closed
        has no ref
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchBar Component SearchBar handles search with results 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nav-bar-menu-item nav-bar-search-container"
      >
        <input
          autocomplete="false"
          class="nav-bar-search"
          data-testid="SEARCH"
          placeholder="PLACEHOLDER"
          type="text"
        />
      </div>
      <div>
        <div>
          ControlleMenu
          open
          <div>
            MenuItem
            <div
              data-testid="ITEM1"
            >
              ITEM1
            </div>
          </div>
          <div>
            MenuItem
            <div
              data-testid="ITEM2"
            >
              ITEM2
            </div>
          </div>
          has no ref
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="nav-bar-menu-item nav-bar-search-container"
    >
      <input
        autocomplete="false"
        class="nav-bar-search"
        data-testid="SEARCH"
        placeholder="PLACEHOLDER"
        type="text"
      />
    </div>
    <div>
      <div>
        ControlleMenu
        open
        <div>
          MenuItem
          <div
            data-testid="ITEM1"
          >
            ITEM1
          </div>
        </div>
        <div>
          MenuItem
          <div
            data-testid="ITEM2"
          >
            ITEM2
          </div>
        </div>
        has no ref
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SearchBar Component SearchBar renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nav-bar-menu-item nav-bar-search-container"
      >
        <input
          autocomplete="false"
          class="nav-bar-search"
          placeholder="PLACEHOLDER"
          type="text"
        />
      </div>
      <div>
        <div>
          ControlleMenu
          closed
          has no ref
        </div>
      </div>
    </div>
    <div
      id="root-portal-id"
    >
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="nav-bar-menu-item nav-bar-search-container"
    >
      <input
        autocomplete="false"
        class="nav-bar-search"
        placeholder="PLACEHOLDER"
        type="text"
      />
    </div>
    <div>
      <div>
        ControlleMenu
        closed
        has no ref
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
